bugfix: due to conflicting (inline!!) css in the main template the text next to the upload form had become invisible.
this absolute position hack is just a quick fix. the markup needs to be
cleaned up...

--- a/src/briefkasten/briefkasten/static/main.css
+++ b/src/briefkasten/briefkasten/static/main.css
@@ -87,3 +87,15 @@ p.subtext {
 p.copy {
     font: 400 14px/1.4 Georgia,serif;
 }
+
+#bk_upload_text{
+    width: 420px;
+    height: 120px;
+    font: 13px Arial;
+    position:absolute;
+    left: 520px;
+    top: 220px;
+    cursor: auto;
+ }
+
+
